buidling character sheet

--- a/scss/utils/_typography.scss
+++ b/scss/utils/_typography.scss
@@ -1,2 +1,3 @@
-$font-primary: 'Roboto', sans-serif;
+$font-primary: Palatino Linotype;
 $font-secondary: 'Roboto', sans-serif;
+$font-tertiary: 'duvall-font';
