--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,55 +1,95 @@
 .item-form {
-  font-family: $font-primary;
+    font-family: $font-primary;
 }
 
 .sheet-header {
-  flex: 0 auto;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  margin-bottom: 10px;
+    flex: 0 auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-bottom: 10px;
 
-  .profile-img {
-    flex: 0 0 100px;
-    height: 100px;
-    margin-right: 10px;
-  }
-
-  .header-fields {
-    flex: 1;
-  }
-
-  h1.charname {
-    height: 50px;
-    padding: 0px;
-    margin: 5px 0;
-    border-bottom: 0;
-    input {
-      width: 100%;
-      height: 100%;
-      margin: 0;
+    .profile-img {
+        flex: 0 0 100px;
+        height: 120px;
+        margin-right: 10px;
     }
-  }
+
+    .header-fields {
+        flex: 1;
+    }
+
+    h1.charname {
+        font-family: $font-tertiary;
+        height: 50px;
+        padding: 0px;
+        margin: 5px 0;
+        border-bottom: 0;
+
+        input {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+        }
+    }
+
+}
+
+.testament {
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+
+    span {
+        font-style: italic;
+        border: 1px solid #7a7971;
+        border-radius: 3px;
+        padding: 1px 3px;
+        background-color: rgba(0, 0, 0, 0.05);
+    }
 }
 
 .sheet-tabs {
-  flex: 0;
+    flex: 0;
 }
 
 .sheet-body,
 .sheet-body .tab,
 .sheet-body .tab .editor {
-  height: 100%;
+    height: 100%;
 }
 
 .tox {
-  .tox-editor-container {
-    background: $c-white;
-  }
+    .tox-editor-container {
+        background: $c-white;
+    }
 
-  .tox-edit-area {
-    padding: 0 8px;
-  }
+    .tox-edit-area {
+        padding: 0 8px;
+    }
+}
+
+.health {
+    border: 1px solid #7a7971;
+    border-radius: 3px;
+    padding: 1px 3px;
+    min-height: 50px;
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.abilities input {
+    margin-left: 30px;
+}
+
+.abilities p {
+    font-weight: bold;
+    margin: 0px 8px 0px 8px;
+    text-align: center;
+}
+
+.abilities p:first-of-type {
+    flex-grow: 2;
+    margin-left: 0px;
 }
