updated features grid

--- a/templates/actor/actor-vislae-sheet.html
+++ b/templates/actor/actor-vislae-sheet.html
@@ -93,7 +93,7 @@
 
         {{!-- Owned Features Tab --}}
         <div class="tab features" data-group="primary" data-tab="features">
-            <section class="grid ">
+            <section class="grid grid-2col">
                 <!-- <aside class="sidebar"> -->
 
                 {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
@@ -142,6 +142,7 @@
                     </div>
                     {{/each}}
                 </div>
+
                 <!-- </aside> -->
 
 
